[package]
name = "mako_delay"
version = "0.1.0"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros", "rt-core", "time", "stream", "process"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
anyhow = "1.0.32"
